package com.baidu.carlife.protobuf;
message CarlifeFileTransferBegin
{
    required int64 fileSize = 1;

    optional int32 version = 2;
}
