package com.baidu.carlife.protobuf;
message CarlifeHuRsaPublicKeyResponse
{
    required string rsaPublicKey = 1;
}
