package com.baidu.carlife.protobuf;
message CarlifeMdAesKeyRequest
{
    required string aesKey = 1;
}
