package com.baidu.carlife.protobuf;
message CarlifeTouchAction
{
	required int32 action = 1;
	required int32 x = 2;
	required int32 y = 3;
	optional int32 pointerx = 4;
	optional int32 pointery = 5;
}
