package com.baidu.carlife.protobuf;
message CarlifeTouchSinglePoint
{
	required int32 x = 1;
	required int32 y = 2;
	optional int32 pointerx = 3;
	optional int32 pointery = 4;
}
