package com.baidu.carlife.protobuf;
message CarlifeVehicleInfo
{
	required int32 moduleID = 1;
	optional int32 supportFlag = 2;
	optional int32 frequency=3;
}